--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: ^4.1.4
+  uuid: ^3.0.4
+  
   flutter: 
     sdk: flutter
 
@@ -17,4 +19,6 @@ dev_dependencies:
 
 flutter: 
   uses-material-design: true
+  assets:
+    - assets/base-rifa.png
 
