--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: ^4.1.4
-  uuid: ^3.0.4
+  crypto: ^3.0.1
   
   flutter: 
     sdk: flutter
