--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: comprobante
 version: 1.0.0+1
 publish_to: none
-description: A new Flutter project.
+description: Aguante PF
 environment: 
   sdk: '>=2.12.0 <3.0.0'
 
