--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "comprobante",
-    "short_name": "comprobante",
+    "name": "Comprobante",
+    "short_name": "Comprobante",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Aguante PF",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
