--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.1.4
   crypto: ^3.0.1
+  screenshot: ^1.2.3
+  share_plus: ^3.0.4
+  path_provider: ^2.0.6
   
   flutter: 
     sdk: flutter
