--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,8 @@ dependencies:
   share_plus: ^3.0.4
   path_provider: ^2.0.6
   
+  
   flutter: 
-    sdk: flutter
-
-dev_dependencies: 
-  flutter_test: 
     sdk: flutter
 
 flutter: 
@@ -25,4 +22,12 @@ flutter:
 
   assets:
     - assets/base-rifa.png
+
+dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/icon.png"
 
